# amara-advent-of-code-2020

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
advent_of_code_2020/: day-1.py  day-2.py  day-4.py
advent_of_code_2020/helpers/: fileparsers.py  index.py
